2011-08-20  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/HexGrammar.tcc: Removed expectation operator that interfered
	with strong negation plugin.

2011-08-16  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/GuessAndCheckModelGenerator.cpp: Fixed TODO in G&C Model Generator.
	* src/dlvhex/State.cpp: Made warning message more precise.

2011-08-01  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/HigherOrderPlugin.cpp: Implemented Higher Order Plugin.
	* include/dlvhex/HigherOrderPlugin.hpp: Likewise.
	* examples/higherorder*.hex: Likewise (testcases).
	* examples/tests/higherorder*.*: Likewise (testcases).

2011-07-27  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/DependencyGraph.cpp: Fixing bug in dependency graph exposed
	by strong negation tests.
	* testsuite/TestDependencyGraph.cpp: New testcase to test dependency graph.

2011-07-26  Peter Schueller  <ps@kr.tuwien.ac.at>

	Summary of changes for going from version 1.7.X to version 2.Y:

	Most important changes:

	* Implemented Evaluation formalism with Evaluation Graph and Model Graph as
	described in the paper "Pushing Efficient Evaluation of HEX Programs by Modular
	Decomposition" by Thomas Eiter, Michael Fink, Giovambattista Ianni, Thomas
	Krennwallner, and Peter Schüller at LPNMR 2011.
	Currently implemented evaluation heuristics are "old" (old dlvhex behavior),
	"trivial" (keep all initial evaluation units, causes a lot of overhead), and
	"easy" (try to collapse evaluation units that are related). Heuristics are
	selectable with --heuristics.

	* Implemented incremental model generation (one model at a time).

	* Entities are now managed using 64bit integers (class dlvhex::ID) and an
	entity registry where all constants, rules, ... are registered.

	* Query Support:
	Queries are now supported as an 'internal' plugin (use --query-enable),
	namely ground and nonground queries as in DLV, support for displaying all