@@ -35,6 +35,7 @@
 #include "dlvhex/Registry.hpp"
 #include "dlvhex/Rule.hpp"
 #include "dlvhex/PluginInterface.h"
+#include "dlvhex/GraphvizHelpers.hpp"
 
 #include <boost/property_map/property_map.hpp>
 #include <boost/foreach.hpp>
@@ -885,14 +886,9 @@ void DependencyGraphFull::writeGraphViz(std::ostream& o, bool verbose) const
   {
     o << graphviz_node_id(*it) << "[label=\"";
     {
-      std::stringstream ss;
+      std::ostringstream ss;
       writeGraphVizNodeLabel(ss, *it, verbose);
-      // escape " into \"
-      boost::algorithm::replace_all_copy(
-        std::ostream_iterator<char>(o),
-        ss.str(),
-        "\"",
-        "\\\"");
+			graphviz::escape(o, ss.str());
     }
     o << "\"";
     if( getNodeInfo(*it).id.isRule() )
@@ -910,14 +906,9 @@ void DependencyGraphFull::writeGraphViz(std::ostream& o, bool verbose) const
     o << graphviz_node_id(src) << " -> " << graphviz_node_id(target) <<
       "[label=\"";
     {
-      std::stringstream ss;
+      std::ostringstream ss;
       writeGraphVizDependencyLabel(o, *dit, verbose);
-      // escape " into \"
-      boost::algorithm::replace_all_copy(
-        std::ostream_iterator<char>(o),
-        ss.str(),
-        "\"",
-        "\\\"");
+			graphviz::escape(o, ss.str());
     }
     o << "\"];" << std::endl;
   }
